Fixing html not taking 100% device width (footer too wide)

--- a/style-global.css
+++ b/style-global.css
@@ -8,20 +8,22 @@
     src: url("./fonts/FOT-UDMarugo_LargePr6N-DB.otf") format("opentype");
 }
 
+* {-webkit-tap-highlight-color: transparent;}
+
 :focus-visible {
     outline: var(--focus-outline);
 }
 
 html {
     min-width: fit-content;
-    width: 100%;
-    height: 100%;
+    width: 100lvw;
+    height: 100lvh;
 }
 
 body {
     font-family: var(--font-standard), sans-serif;
-    min-height: 100%;
-    min-width: 100%;
+    min-height: 100vw;
+    min-width: 100vw;
     margin: 0;
 
     display: flex;
@@ -31,13 +33,12 @@ body {
 }
 
 header,footer {
-    width: 100%;
     flex-shrink: 0;
 }
 
 header {
     margin-bottom: 50px;
-    width: 100%;
+    width: 100vw;
     min-width: fit-content;
 
     background-color: rgba(255,255,255,0.5);
@@ -46,17 +47,20 @@ header {
 
 footer {
     margin-top: 50px;
-    min-width: fit-content;
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
 
     background-color: rgba(20,35,35,0.7);
     color: white;
     border-top: 5px solid black;
     position: relative;
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /*display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr auto;
-    column-gap:40px;
+    grid-template-rows: 1fr auto;*/
+    column-gap:20px;
     row-gap:20px;
 
     padding-inline: 7.5%;
@@ -68,10 +72,11 @@ footer {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 20px;
         .socials a:active {color: cyan}
+        flex-grow: 2;
     }
 
     #footerLeftSide {
-        justify-self: left;
+        /*justify-self: left;*/
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: 1fr;
@@ -79,21 +84,26 @@ footer {
         justify-items: center;
         gap: 20px;
         grid-auto-flow: row;
+        flex-grow: 1;
     }
 
     .footerNotice {
         font-family: var(--font-marugo), sans-serif;
-        grid-column: span 2;
+        /*grid-column: span 2;*/
         text-align: center;
+        width: 100%;
     }
 
     #footerLogoContainer {
+        justify-self: flex-start;
         #footerLogo {
             max-width: 80px;
         }
     }
 
     #backgroundSelector {
+        justify-self: flex-end;
+        align-self: flex-start;
         display: flex;
         flex-direction: column;
         align-items: center;
